@@ -169,8 +169,14 @@ class XmlWebService(QtCore.QObject):
 
     def _start_request(self, method, host, port, path, data, handler, xml,
                        mblogin=False, cacheloadcontrol=None):
-        log.debug("%s http://%s:%d%s", method, host, port, path)
-        url = QUrl.fromEncoded("http://%s:%d%s" % (host, port, path))
+        if mblogin and host=='musicbrainz.org' and port==80:
+            # mblogin implies call to musicbrainz which supports SSL so switch port to 443 for actual call
+            ssl = "s"
+            port = 443
+        else:
+            ssl = ""
+        log.debug("%s http%s://%s:%d%s", method, ssl, host, port, path)
+        url = QUrl.fromEncoded("http%s://%s:%d%s" % (ssl, host, port, path))
         if mblogin:
             url.setUserName(config.setting["username"])
             url.setPassword(config.setting["password"])
